<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_plusTitle"
        app:bootstrapBrand="primary"
        app:bootstrapHeading="h4" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_title">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/input_timeName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:hint="@string/tip_timeName" />


        <TableLayout
            android:id="@+id/input_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_timeName"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/setNum"
                    android:textColor="#000000" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/setsMinBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    app:bootstrapBrand="primary"
                    app:fontAwesomeIcon="fa_minus"
                    app:roundedCorners="true" />

                <EditText
                    android:id="@+id/setsNum"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_span="3"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="3" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/setsPlsBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    app:bootstrapBrand="primary"
                    app:fontAwesomeIcon="fa_plus"
                    app:roundedCorners="true" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/workTime"
                    android:textColor="#000000" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/wtMinBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    app:bootstrapBrand="primary"
                    app:fontAwesomeIcon="fa_minus"
                    app:roundedCorners="true" />

                <EditText
                    android:id="@+id/wtMNum"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/wtSNum"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="30" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/wtPlsBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    app:bootstrapBrand="primary"
                    app:fontAwesomeIcon="fa_plus"
                    app:roundedCorners="true" />


            </TableRow>

            <TableRow android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/restTime"
                    android:textColor="#000000" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/rtMinBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    app:bootstrapBrand="primary"
                    app:fontAwesomeIcon="fa_minus"
                    app:roundedCorners="true" />

                <EditText
                    android:id="@+id/rtMNum"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/rtSNum"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="10" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/rtPlsBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    app:bootstrapBrand="primary"
                    app:fontAwesomeIcon="fa_plus"
                    app:roundedCorners="true" />


            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_body"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/input_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancle"
                app:bootstrapBrand="danger"
                app:bootstrapSize="lg" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/input_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg" />

        </LinearLayout>

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>